--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -77,7 +77,7 @@
                   <p>{{ partner_blurb }} </p>
                 {% endif %}
 
-                <h3>Facts About...</h3>
+                <h3>Facts About</h3>
                 <p>
                     {% if taxon.factoid|length > 0 %}
                         {{ taxon.factoid }}
