Ensure all Get Help buttons point to the Getting Started help page. Refactor Help section template code.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1536 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -229,7 +229,9 @@
                         <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-about %}"{% endifequal %}>About Go-Botany</a></h5>
 			        </div>
 			        <div class="section">
-                        <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-collections %}"{% endifequal %}>Advanced Map to Groups</a></h5>
+                        <h5><a class="sidebarlink" {% ifequal
+                                request.path u %}class="current"{% else
+                                %}href="{% url simplekey-help-map %}"{% endifequal %}>Advanced Map to Groups</a></h5>
 			        </div>
 			        <div class="section">
                         <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-glossary0 %}"{% endifequal %}>Glossary</a></h5>
