--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -153,7 +153,7 @@
 			
                     <div class="section">
                         <h5 class="left help">Need Help?</h5>
-                        <a href="{% url simplekey-help-about %}"
+                        <a href="{% url simplekey-help-start %}"
                             class="get-help-btn left">Get Help</a>
                         <div class="clearit"></div>
                     </div><!--Closes .section-->
