--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -274,7 +274,8 @@
                 
                 <div class="section">
 				    <h5 class="left help">Need Help?</h5>
-                    <a href="/help/" class="get-help-btn left">Get Help</a>
+                    <a href="{% url simplekey-help-start %}"
+                        class="get-help-btn left">Get Help</a>
 				    <div class="clearit"></div>
 			    </div>
             </div>
