--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -34,7 +34,7 @@
                         <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
                     </li>
                     <li class="teaching-tools"><a href="#">Teaching Tools</a></li>
-                    <li class="about last"><a href="/help/">About</a></li>
+                    <li class="about last"><a href="{% url simplekey-help-about %}">About</a></li>
                 </ul>
                 <div class="clearit"></div>
             </nav>
