--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -27,16 +27,16 @@
                         </li>
                         <li class="second completed">
                         <a href="{% url simplekey-pilegroup pilegroup.slug %}"
-                            ><img
+                            title="{{ pilegroup.friendly_title }}"><img
                             src="/static/images/icons/group.png" 
-                            alt="">{{ pilegroup.name }}</a>
+                            alt="">{{ pilegroup.friendly_title }}</a>
                         </li>
                         <li class="third completed">
                         <a id="results-link"
                             href="{% url simplekey-pile pilegroup.slug pile.slug %}"
-                            ><img
+                            title="{{ pile.friendly_title }}"><img
                             src="/static/images/icons/subgroup.png" 
-                            alt="">{{ pile.name }}</a>
+                            alt="">{{ pile.friendly_title }}</a>
                         </li>
                         <li class="last current">
                         <a><img
