Use sentence-style capitalization consistently for group and subgroup headings on the levels 1-3 pages and the Advanced Map to Groups page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1541 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -13,7 +13,7 @@
     <div id="plant-map-list">
         {% for group in page.pilegroups.all %}
             <div class="plant-group{% if forloop.first %} first{% else %}{% if forloop.last %} last{% endif %}{% endif %}{% if group.friendly_title|length > 18 %} multi-line{% endif %}">
-                <h5>{{ group.friendly_title }}</h5>
+                <h5>{{ group.friendly_title|lower|capfirst }}</h5>
                 <div class="image">
                     <div class="frame"></div>
                     <div class="img-container">
@@ -37,7 +37,7 @@
             <div class="subgroups hidden">
                 {% for subgroup in group.piles.all %}
                     <div class="plant-subgroup{% if forloop.last %} last{% endif %}">
-                        <h5>{{ subgroup.friendly_title }}</h5>
+                        <h5>{{ subgroup.friendly_title|lower|capfirst }}</h5>
                         <div class="image">
                             <div class="frame"></div>
                             <div class="img-container">
