Bug fix: On the species page, clicking the breadcrumb link for the subgroup now retains the last filter choices like pressing the Back button does.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1543 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -33,7 +33,7 @@
                         </li>
                         <li class="third completed">
                         <a id="results-link"
-                            href="{% url simplekey-pile pilegroup.slug pile.slug %}"
+                            href="{% if last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
                             title="{{ pile.friendly_title }}"><img
                             src="/static/images/icons/subgroup.png" 
                             alt="">{{ pile.friendly_title }}</a>
